test/cli/test-mutating-policy/mutate-existing/patched-target.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    mutated: "true"
  name: test-configmap
  namespace: test-ns
data:
  key: value
