test/cli/test-mutating-policy/mutate-existing/target.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-configmap
  namespace: test-ns
data:
  key: value
