test/cli/test-mutating-policy/mutate-existing/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-existing-test
policies:
- policy.yaml
resources:
- trigger.yaml
results:
- isMutatingPolicy: true
  kind: ConfigMap
  patchedResources: patched-target.yaml
  policy: mutate-existing-configmap
  resources:
  - test-ns/test-configmap
  result: pass
targetResources:
- target.yaml
